force-app/main/default/objects/Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Poziomy kolejno wg ważności:
ERROR, WARN, INFO, DEBUG, TRACE
czyli np level:
ERROR będzie pomijał kolejne levele i logował tylko logi ERROR
INFO będzie logował INFO, ERROR i WARN ale będzie pomijał DEBUG i TRACE</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>🔴ERROR</fullName>
            </value>
            <value>
                <fullName>🟠WARN</fullName>
            </value>
            <value>
                <fullName>🟡INFO</fullName>
            </value>
            <value>
                <fullName>🟢DEBUG</fullName>
            </value>
            <value>
                <fullName>🔵TRACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>