force-app/main/default/objects/Log__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Object Name</description>
    <label>Object</label>
    <length>30</length>
    <type>Text</type>
</CustomField>